--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -20,3 +20,23 @@ html,body {
     height: 60px;
     background: url('/assets/images/login_title.png') no-repeat center;
 }
+.layui-form {
+    padding: 0 30px;
+}
+.layui-form-item {
+    position: relative;
+}
+.layui-form-item input {
+    padding-left: 32px;
+}
+.layui-icon {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+}
+.links {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 12px;
+    color: #333;
+}
